--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,82 +2,82 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: La Suite Boutique Hotel
-  id: la-suite-boutique-hotel
-  location: Procida, Campania
-  description: Un sogno a 5* con spa nella pittoresca isola di Procida
-  price: 131
-  price-description: per camera per notte
-  saved: 54
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95134/22f40907_88ba_43e3_b730_b922af7b7554.jpg
-  link: https://it.secretescapes.com/la-suite-boutique-hotel-procida-campania/sale
-  sale-id: 95134
-  domestic: true
-
-- title: I Monasteri Golf & Spa Resort
-  id: i-monasteri-golf-and-spa-resort
-  location: Siracusa, Sicilia
-  description: Soggiorno benessere a 5* in un antico monastero siciliano&nbsp;
+- title: Relais Sant'Uffizio Wellness & Spa
+  id: relais-santuffizio-wellness-and-spa
+  location: Monferrato, Piemonte
+  description: Relais 4* risalente al XVII secolo nel Monferrato, per un benessere senza limiti
   price: 105
   price-description: per camera per notte
-  saved: 61
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95177/877e6f5b_4f43_4af8_9364_90ed231da2ae.jpg
-  link: https://it.secretescapes.com/i-monasteri-golf-and-spa-resort-siracusa-sicilia/sale
-  sale-id: 95177
+  saved: 62
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68733/1a4615b1_47ac_4a9a_bae7_a873b0865c3e.jpg
+  link: https://it.secretescapes.com/relais-santuffizio-wellness-and-spa-monferrato-piemonte-it/sale
+  sale-id: 95540
   domestic: true
 
-- title: Hotel Bad Fallenbach
-  id: hotel-bad-fallenbach
-  location: San Leonardo in Passiria, Trentino-Alto Adige
-  description: <div>Un 4*S green tra le meraviglie dell’Alto Adige, per un benessere ad alta quota</div><div><br></div>
-  price: 229
+- title: Almar Jesolo Resort & Spa
+  id: almar-jesolo-resort-and-spa
+  location: Lido di Jesolo, Veneto
+  description: Benessere e lusso a 5* in un resort sul Lido di Jesolo
+  price: 149
   price-description: per camera per notte
-  saved: 46
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/72152/9fa3897c_455d_4a72_9296_559c4bda204a.jpg
-  link: https://it.secretescapes.com/hotel-bad-fallenbach-san-leonardo-in-passiria-trentino-alto-adige-it123/sale
-  sale-id: 94973
+  saved: 56
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/32965/58013b38_59a9_4e3f_8559_f462c74e76b4.jpg
+  link: https://it.secretescapes.com/almar-jesolo-resort-and-spa-lido-di-jesolo-veneto-it1/sale
+  sale-id: 95680
   domestic: true
 
-- title: Hotel Pulitzer
-  id: hotel-pulitzer
-  location: Roma, Lazio
-  description: Vivi la Dolce Vita in un raffinato 4* a Roma
-  price: 89
+- title: Hotel Christof
+  id: hotel-christof
+  location: Appiano sulla Strada del Vino, Trentino-Alto Adige
+  description: Soggiorno spa in un hotel hip e moderno in Alto Adige
+  price: 184
   price-description: per camera per notte
-  saved: 40
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/72976/3eb062c8_72e5_4805_b87f_646ca71ce324.jpg
-  link: https://it.secretescapes.com/hotel-pulitzer-roma-lazio-italia-roma/sale
-  sale-id: 95364
+  saved: 48
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/87898/e8a5af3e_5f92_4701_98aa_c8fcfca96073.jpg
+  link: https://it.secretescapes.com/hotel-christof-appiano-sulla-strada-del-vino-trentino-alto-adige-it/sale
+  sale-id: 95929
   domestic: true
 
-- title: Le Massif
-  id: le-massif
-  location: Courmayeur, Valle d'Aosta
-  description: Soggiorno 5* a Courmayeur in un nuovo resort con area benessere
-  price: 122
+- title: Mari del Sud Resort
+  id: mari-del-sud-resort
+  location: Vulcano, Isole Eolie
+  description: Estate al sapore di mare in un resort 4* sulla baia di Ponente di Vulcano
+  price: 58
   price-description: per camera per notte
-  saved: 77
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95083/7931e93d_17d9_4dc6_914d_433350ec768b.jpg
-  link: https://it.secretescapes.com/le-massif-courmayeur-valle-daosta/sale
-  sale-id: 95083
+  saved: 35
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/19285/8640d351_200a_4192_be80_51ea16fe2653.jpg
+  link: https://it.secretescapes.com/mari-del-sud-resort-vulcano-isole-eolie-ita7/sale
+  sale-id: 96070
   domestic: true
 
-- title: Relais Histo' San Pietro sul Mar Piccolo
-  id: relais-histo-san-pietro-sul-mar-piccolo
-  location: Taranto, Puglia
-  description: Vacanza relax sul mare di Taranto, in un'antica masseria con area benessere
-  price: 180
+- title: Savona 18 Suites
+  id: savona-18-suites
+  location: Milano, Lombardia
+  description: Soggiorno glamour in un hotel di design a Milano, a due passi dai Navigli
+  price: 120
   price-description: per camera per notte
-  saved: 54
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52996/95761db6_5a85_4a38_a82a_847e0e655eff.jpg
-  link: https://it.secretescapes.com/relais-histo-san-pietro-sul-mar-piccolo-taranto-puglia-italia/sale
-  sale-id: 94850
+  saved: 33
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/64792/0dbbdf83_b334_4263_9cc1_23c52b60a647.jpg
+  link: https://it.secretescapes.com/savona-18-suites-milano-lombardia1/sale
+  sale-id: 96299
+  domestic: true
+
+- title: San Michele
+  id: san-michele
+  location: Procida, Campania
+  description: Suite bohemienne per un hotel boutique sull’isola di Procida
+  price: 125
+  price-description: per camera per notte
+  saved: 36
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/96310/5b7810ad_b5d3_4e26_8ff1_40df7f2a28d1.jpg
+  link: https://it.secretescapes.com/san-michele-procida-campania/sale
+  sale-id: 96310
   domestic: true
 
 ################################################################################
@@ -91,23 +91,10 @@
   price: 249
   price-description: per camera per notte
   saved: 57
-  expires: 2019/06/13
+  expires: 2019/06/19
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74357/01dc45ca_f10b_4d0f_bacf_1bb0635c2926.jpg
   link: https://it.secretescapes.com/the-mandrake-londra-italia-it/sale
   sale-id: 94946
-  domestic: false
-
-- title: Finca Serena
-  id: finca-serena
-  location: Montuiri, Maiorca
-  description: Un casale luxury con spa da sogno nel cuore di Maiorca
-  price: 224
-  price-description: per camera per notte
-  saved: 41
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95288/9f34fef9_51da_40c8_aec7_68c510ebe87c.jpg
-  link: https://it.secretescapes.com/finca-serena-montuiri-maiorca/sale
-  sale-id: 95288
   domestic: false
 
 - title: Story Hotel Riddargatan
@@ -117,7 +104,7 @@
   price: 103
   price-description: per camera per notte
   saved: 34
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/49805/221f07b8_5ea4_4435_b03f_d59967a7445c.jpg
   link: https://it.secretescapes.com/story-hotel-riddargatan-stoccolma-svezia12/sale
   sale-id: 95328
@@ -149,32 +136,6 @@
   sale-id: 95863
   domestic: false
 
-- title: Hospes Palau de la Mar
-  id: hospes-palau-de-la-mar
-  location: Valencia, Spagna
-  description: Scopri Valencia da un magnifico 5* con spa nel cuore della città
-  price: 143
-  price-description: per camera per notte
-  saved: 35
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/6984/b670907a_c729_4a32_9196_83dd2cf49d48.jpg
-  link: https://it.secretescapes.com/hospes-palau-de-la-mar-valencia-spagna-italia/sale
-  sale-id: 95372
-  domestic: false
-
-- title: Lobby Room Sevilla
-  id: lobby-room-sevilla
-  location: Siviglia, Spagna
-  description: Un boutique hotel di design per un city break a Siviglia
-  price: 120
-  price-description: per camera per notte
-  saved: 31
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95966/e5d76351_a98e_48c8_bed8_ae756dfcf60c.jpg
-  link: https://it.secretescapes.com/lobby-room-sevilla-siviglia-spagna/sale
-  sale-id: 95966
-  domestic: false
-
 - title: Hotel Jazz Barcelona
   id: hotel-jazz-barcelona
   location: Barcellona, Spagna
@@ -182,8 +143,8 @@
   price: 97
   price-description: per camera per notte
   saved: 42
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81186/0e10b7f2_7420_4eec_abc8_5dce092a078f.jpg
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/25434/8cf64809_0aac_4e51_8178_4ab2ff3619df.jpg
   link: https://it.secretescapes.com/hotel-jazz-barcelona-barcellona-spagna-it/sale
   sale-id: 95997
   domestic: false
@@ -195,20 +156,138 @@
   price: 75
   price-description: per camera per notte
   saved: 41
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/54642/f37348e1_a0b9_4f55_85b5_e652774c46e7.jpg
   link: https://it.secretescapes.com/elite-hotel-carolina-tower-solna-stoccolma-ita2/sale
   sale-id: 95634
   domestic: false
 
-- title: GPRO Valparaiso Palace Hotel & Spa
-  location: Palma di Maiorca, Isole Baleari
-  description: Esclusivo resort a 5* nel cuore di Palma di Maiorca
+- title: Sir Victor Hotel
+  id: sir-victor-hotel
+  location: Barcellona, Spagna
+  description: Un 5* di design con spa e piscina sul tetto nel cuore di Barcellona
+  price: 159
+  price-description: per camera per notte
+  saved: 52
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92339/828c60b9_056e_475f_b939_d2709920aedc.jpg
+  link: https://it.secretescapes.com/sir-victor-hotel-barcellona-spagna1/sale
+  sale-id: 96404
+  domestic: false
+
+- title: Castillo de Monda
+  id: castillo-de-monda
+  location: Monda, Spagna
+  description: Soggiorno relax in un incantevole castello nel cuore dell'Andalusia
+  price: 81
+  price-description: per camera per notte
+  saved: 27
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68242/4f360089_5b23_4247_8a0e_1b66cf8d9196.jpg
+  link: https://it.secretescapes.com/castillo-de-monda-monda-spagna-it12/sale
+  sale-id: 96316
+  domestic: false
+
+- title: Hotel RD Mar de Portals
+  id: hotel-rd-mar-de-portals
+  location: Maiorca, Spagna
+  description: <div>Un 4* con spa per soli adulti tra le spiagge da favola di Maiorca</div>
+  price: 125
+  price-description: per camera per notte
+  saved: 43
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90300/6768c78b_5587_41ec_8035_e67d904da5fc.jpg
+  link: https://it.secretescapes.com/hotel-rd-mar-de-portals-maiorca-spagna/sale
+  sale-id: 96251
+  domestic: false
+
+- title: Hospes Puerta de Alcalá
+  id: hospes-puerta-de-alcalá
+  location: Madrid, Spagna
+  description: Un boutique hotel a 5* in un palazzo del XIX secolo nel cuore di Madrid
+  price: 175
+  price-description: per camera per notte
+  saved: 35
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/34119/c625d16f_c89e_4e5b_9f4e_c12385435d48.jpg
+  link: https://it.secretescapes.com/hospes-puerta-de-alcala-madrid-spagna1/sale
+  sale-id: 96148
+  domestic: false
+
+- title: Buendía Corralejo Nohotel
+  id: buendía-corralejo-nohotel
+  location: Fuerteventura
+  description: Una fuga chic a Fuerteventura in appartamenti a due passi dal mare
   price: 74
-  price-description: a persona. Basato su 2 persone per camera per notte
+  price-description: per camera per notte
   saved: 49
-  expires: 2019/06/18
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg?auto=format,compress
-  link: https://it.secretescapes.com/gpro-valparaiso-palace-hotel-and-spa-palma-di-maiorca-isole-baleari/sale
-  sale-id: 95067
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/96118/0402c2c4_ba71_405a_8c00_7e4675cd1beb.jpg
+  link: https://it.secretescapes.com/buendia-corralejo-nohotel-fuerteventura/sale
+  sale-id: 96118
+  domestic: false
+
+- title: H10 Atlantic Sunset
+  id: h10-atlantic-sunset
+  location: Tenerife, Spagna
+  description: Nuovissimo 5* di lusso con vista oceano a Tenerife, con apertura a giugno 2019
+  price: 137
+  price-description: per camera per notte
+  saved: 33
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91198/b57978af_4699_4696_8c4a_741666e30bb8.jpg
+  link: https://it.secretescapes.com/h10-atlantic-sunset-tenerife-spagna-italia/sale
+  sale-id: 96036
+  domestic: false
+
+- title: Hotel Cap Negret
+  id: hotel-cap-negret
+  location: Altea, Spagna
+  description: Un 4* dallo stile moderno sulla Costa Blanca, con opzione in pensione completa
+  price: 66
+  price-description: per camera per notte
+  saved: 46
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/69749/cdc39e32_7c68_4142_8e55_91f9efefa5d9.jpg
+  link: https://it.secretescapes.com/hotel-cap-negret-altea-spagna1/sale
+  sale-id: 96025
+  domestic: false
+
+- title: Marina Suites
+  id: marina-suites
+  location: Gran Canaria, Isole Canarie
+  description: La tua suite di design in un 4* con vista sull'Oceano Atlantico
+  price: 95
+  price-description: per camera per notte
+  saved: 41
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95349/405487f3_c915_4e1d_96ad_baa4ce61a19c.jpg
+  link: https://it.secretescapes.com/marina-suites-gran-canaria-isole-canarie/sale
+  sale-id: 95349
+  domestic: false
+
+- title: Comfort Hotel Børsparken
+  id: comfort-hotel-børsparken
+  location: Oslo, Norvegia
+  description: Alla scoperta di Oslo da un hotel sul mare vicino al Barcode Project
+  price: 95
+  price-description: per camera per notte
+  saved: 30
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/82872/578c09d3_bf82_48b4_9732_4052c54e497e.jpg
+  link: https://it.secretescapes.com/comfort-hotel-boersparken-oslo-norvegia-it/sale
+  sale-id: 96358
+  domestic: false
+
+- title: Clarion Collection Hotel Folketeateret
+  id: clarion-collection-hotel-folketeateret
+  location: Oslo, Norvegia
+  description: City break tra design e comfort a 4* nel cuore di Oslo&nbsp;
+  price: 119
+  price-description: per camera per notte
+  saved: 32
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/47875/96e1fc6b_13d5_4473_902e_a62b4a868981.jpg
+  link: https://it.secretescapes.com/clarion-collection-hotel-folketeateret-oslo-norvegia/sale
+  sale-id: 95849
   domestic: false
