--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,29 +2,43 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Sentralt med svømmebasseng i Oslo
-  id: sentralt-med-svømmebasseng-i-oslo
-  location: Radisson Blu Scandinavia Hotel, Oslo
-  description: Bo moderne og sentralt i Oslo – tett på sentrums muséer, teatre og attraksjoner
-  price: 1465
+- title: Topp beliggenhet i Oslo
+  id: topp-beliggenhet-i-oslo
+  location: Comfort Hotel Børsparken, Oslo, Norge
+  description: Moderne hotell med crossfitstudio midt i hjertet av Oslo, inkl. frokost
+  price: 933
   price-description: per rom per natt
-  saved: 47
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95329/a62e0a7a_d8c8_437e_8341_b45496c16189.jpg
-  link: https://no.secretescapes.com/sentralt-med-svoemmebasseng-i-oslo-radisson-blu-scandinavia-hotel-oslo/sale
-  sale-id: 95329
+  saved: 30
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/82872/578c09d3_bf82_48b4_9732_4052c54e497e.jpg
+  link: https://no.secretescapes.com/topp-beliggenhet-i-oslo-comfort-hotel-boersparken-oslo-norge-no/sale
+  sale-id: 96358
   domestic: true
 
-- title: Slapp av på spa i Son
-  location: Son Spa, Son, Akershus, Norge
-  description: Sett av tid til deg selv på Son Spa, inkludert frokost og adgang til spa
-  price: 602
-  price-description: per person. Basert på 2 personer per rom per natt
-  saved: 29
-  expires: 2019/06/18
-  image: https://d2g6qre7voj6kv.cloudfront.net/hotels/63/6d1297d0_aa9d_4582_aa82_96bee3fdd1d0.jpg?auto=format,compress
-  link: https://no.secretescapes.com/slapp-av-paa-spa-i-son-son-spa-son-akershus-no-no/sale-hotel
-  sale-id: A2877
+- title: Designhotell med art deco-sjarm i Oslo
+  id: designhotell-med-art-deco-sjarm-i-oslo
+  location: Clarion Collection Hotel Folketeateret, Oslo
+  description: Elegant art deco-hotell i hjertet av Oslo, inkludert frokost og kveldsmat
+  price: 1160
+  price-description: per rom per natt
+  saved: 32
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/38433/188ec379_8098_418f_a476_03a544c30c0a.jpg
+  link: https://no.secretescapes.com/designhotell-med-art-deco-sjarm-i-oslo-clarion-collection-hotel-folketeateret-oslo/sale
+  sale-id: 95849
+  domestic: true
+
+- title: Tradisjonsrikt i Oslo
+  id: tradisjonsrikt-i-oslo
+  location: Bondeheimen Hotell, Oslo
+  description: Særnorsk og tradisjonsrikt hotell i hjertet av hovedstaden, inkludert frokost
+  price: 925
+  price-description: per rom per natt
+  saved: 23
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/60526/7221e66d_e420_474e_b3fd_53b085d62ece.jpg
+  link: https://no.secretescapes.com/tradisjonsrikt-i-oslo-bondeheimen-hotell-oslo/sale
+  sale-id: 96342
   domestic: true
 
 ################################################################################
@@ -38,23 +52,10 @@
   price: 1451
   price-description: per rom per natt
   saved: 50
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg
   link: https://no.secretescapes.com/femstjerners-luksus-paa-mallorca-gpro-valparaiso-palace-and-spa-palma-de-mallorca-spania2/sale
   sale-id: 95067
-  domestic: false
-
-- title: Luksuriøst golfresort i tidligere kloster
-  id: luksuriøst-golfresort-i-tidligere-kloster
-  location: I Monasteri Golf Resort, Siracusa, Sicilia, Italia
-  description: Hotell i et sjarmerende tidligere kloster med historisk atmosfære og landlig luksus
-  price: 1023
-  price-description: per rom per natt
-  saved: 61
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/65890/b4f2cf0a_f6ea_4661_9173_bd8f2b4267ea.jpg
-  link: https://no.secretescapes.com/luksurioest-golfresort-i-tidligere-kloster-i-monasteri-golf-resort-siracusa-sicilia-italia-1/sale
-  sale-id: 95177
   domestic: false
 
 - title: Elegant boutiquehotell i Fitzrovia
@@ -64,7 +65,7 @@
   price: 2418
   price-description: per rom per natt
   saved: 57
-  expires: 2019/06/13
+  expires: 2019/06/19
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74357/192483b6_5605_429d_9363_db368ad4dc60.jpg
   link: https://no.secretescapes.com/fantastiske-fitzrovia-the-mandrake-london-england-1/sale
   sale-id: 94946
@@ -77,23 +78,10 @@
   price: 1005
   price-description: per rom per natt
   saved: 34
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/461d2da7_fec8_4cf0_9b3d_31f16cc3310a.jpg
   link: https://no.secretescapes.com/elegant-designhotell-paa-stureplan-story-hotel-riddargatan-stockholm-sverige-1/sale
   sale-id: 95328
-  domestic: false
-
-- title: Opplev Roma fra elegant hotell
-  id: opplev-roma-fra-elegant-hotell
-  location: Hotel Pulitzer Roma, Roma, Italia
-  description: Opphold med frokost på trendy hotell med stilig interiør, inkludert frokost og velkomstdrink
-  price: 871
-  price-description: per rom per natt
-  saved: 40
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/57116/189425a6_932d_4e52_8b0b_a5880b0c8e64.jpg
-  link: https://no.secretescapes.com/opplev-roma-fra-elegant-hotell-hotel-pulitzer-roma-roma-italia-1/sale
-  sale-id: 95364
   domestic: false
 
 - title: Nytt og trendy hotell i East End
@@ -116,8 +104,60 @@
   price: 729
   price-description: per rom per natt
   saved: 41
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/64357/fd69d8b8_4cf3_44fe_93e1_97006f72d151.jpg
   link: https://no.secretescapes.com/skandinavisk-design-i-spennende-bydel-elite-hotel-carolina-tower-stockholm-sverige-no-no/sale
   sale-id: 95634
+  domestic: false
+
+- title: Spansk ferie ved shoppingboulevard
+  id: spansk-ferie-ved-shoppingboulevard
+  location: Sir Victor Hotel, Barcelona, Spania
+  description: Byferie i Barcelona – like ved shoppingparadiset Passeig de Gràcia
+  price: 1554
+  price-description: per room per natt
+  saved: 52
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92339/828c60b9_056e_475f_b939_d2709920aedc.jpg
+  link: https://no.secretescapes.com/spansk-ferie-ved-shoppingboulevard-sir-victor-hotel-barcelona-spania/sale
+  sale-id: 96404
+  domestic: false
+
+- title: Solfylt strandliv på Mallorca
+  id: solfylt-strandliv-på-mallorca
+  location: Hotel RD Mar de Portals, Portals Nous, Mallorca, Spania
+  description: Firestjerners hotell for voksne i nærheten av stranden og Palma, inkludert frokost m.m.
+  price: 1221
+  price-description: per rom per natt
+  saved: 43
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90300/6768c78b_5587_41ec_8035_e67d904da5fc.jpg
+  link: https://no.secretescapes.com/solfylt-strandliv-paa-mallorca-hotel-rd-mar-de-portals-portals-nous-mallorca-spania-no1/sale
+  sale-id: 96251
+  domestic: false
+
+- title: Dramatisk natur utenfor Sicilia
+  id: dramatisk-natur-utenfor-sicilia
+  location: Mari del Sud Resort & Village, Vulkano-øya, Italia
+  description: Opplev Italias praktfulle Vulkano-øy på en flott resort, inkludert frokost eller halvpensjon
+  price: 565
+  price-description: per rom per natt
+  saved: 35
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/19285/8640d351_200a_4192_be80_51ea16fe2653.jpg
+  link: https://no.secretescapes.com/dramatisk-natur-utenfor-sicilia-mari-del-sud-resort-and-village-vulkano-oeya-italia-no1/sale
+  sale-id: 96070
+  domestic: false
+
+- title: Elegant opphold på Procida
+  id: elegant-opphold-på-procida
+  location: San Michele Procida, Marina Corricella, Procida, Italia
+  description: Sjarmerende hotell i hjertet av Marina Corricella med restaurant, butikk og takterrasse
+  price: 1221
+  price-description: per suite per natt
+  saved: 36
+  expires: 2019/06/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/96310/5b7810ad_b5d3_4e26_8ff1_40df7f2a28d1.jpg
+  link: https://no.secretescapes.com/elegant-opphold-paa-procida-san-michele-procida-marina-corricella-procida-italia/sale
+  sale-id: 96310
   domestic: false
